<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/ic_header"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/jarak_20dp"
            android:src="@drawable/ic_side_menu" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/jarak_20dp"
            android:layout_marginLeft="@dimen/jarak_20dp"
            android:src="@drawable/ic_notification" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_whiteborder"
            android:padding="3dp"
            android:src="@drawable/profile"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/lightBlue"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginVertical="@dimen/jarak_8dp"
            android:text="@string/username"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_size_14sp"
            android:text="@string/bloodtype"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/jarak_8dp"
        android:layout_marginHorizontal="@dimen/jarak_20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bloodgive_numb"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_24sp"
                android:textColor="@color/lightBlue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bloodgive"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="28dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bloodreceive_numb"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_24sp"
                android:textColor="@color/lightBlue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bloodreceive"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thanks_numb"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_24sp"
                android:textColor="@color/lightBlue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thanks"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/text_size_14sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/jarak_20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_search_donor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_donor"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="-10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_donor"
                android:textSize="@dimen/jarak_12dp"
                android:textColor="@color/fontDesc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="56dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_blood_needed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_needed"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="-10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_needed_desc"
                android:textSize="@dimen/jarak_12dp"
                android:textColor="@color/fontDesc"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/jarak_20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_message"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="-10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages_desc"
                android:textSize="@dimen/jarak_12dp"
                android:textColor="@color/fontDesc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="86dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_donor_history"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/lightBlue"
                android:layout_marginTop="-10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_desc"
                android:textSize="@dimen/jarak_12dp"
                android:textColor="@color/fontDesc"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>