<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBlue"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/jarak_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_account_tittle"
            android:textSize="36dp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_account_desc"
            android:textSize="@dimen/text_size_14sp"
            android:gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginTop="@dimen/jarak_24dp"
            android:text="enter verification code here.."/>

        <TextView
            android:id="@+id/btnVerification"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="SEND"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/jarak_14dp"
            android:layout_marginTop="@dimen/jarak_24dp"
            android:textSize="@dimen/jarak_14dp"
            android:background="@drawable/whiteborder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/jarak_20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                android:text="@string/verify_account_desc2"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginLeft="@dimen/text_size_10sp"
                android:textSize="@dimen/text_size_14sp"
                android:text="Resend"
                android:onClick="openRegisterActivity"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>