<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_header">

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="@dimen/jarak_20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_header_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_height="match_parent"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                android:fontFamily="@font/roboto_bold"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:hint="Username"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:hint="Email"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="@dimen/text_size_14sp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:hint="Phone Number"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_marginRight="34dp"
                android:layout_height="wrap_content"
                android:text="Male"/>

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_marginLeft="34dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:textSize="@dimen/text_size_14sp"
                    android:layout_height="match_parent"
                    android:text="@string/my_spinner_hint"/>

                <ImageView
                    android:id="@+id/blood_type"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_register_dropdown"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:textSize="@dimen/text_size_14sp"
                    android:layout_height="match_parent"
                    android:text="@string/reshus"/>

                <ImageView
                    android:id="@+id/reshus"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_register_dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_14sp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:hint="Password"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />
        <EditText
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:textSize="@dimen/text_size_14sp"
            android:hint="Retype Password"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />

        <RadioGroup
            android:id="@+id/uses"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:textSize="@dimen/text_size_14sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/jarak_20dp"
                android:layout_height="wrap_content"
                android:text="personal"/>

            <RadioButton
                android:id="@+id/organization"
                android:layout_marginLeft="@dimen/jarak_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Organization"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:textSize="@dimen/text_size_14sp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_14sp"
                android:layout_height="match_parent"
                android:text="@string/job"/>

            <ImageView
                android:id="@+id/job"
                android:layout_width="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_register_dropdown"
                android:layout_height="24dp"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/addres"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/jarak_20dp"
            android:textSize="@dimen/text_size_14sp"
            android:hint="Home Address"
            android:textColor="@color/fontDesc"
            android:textColorHint="@color/fontDesc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/jarak_20dp"
                android:textSize="@dimen/text_size_14sp"
                android:hint="Default Location"
                android:textColor="@color/fontDesc"
                android:textColorHint="@color/fontDesc" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_blood_needed_location"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/jarak_20dp"
            android:layout_marginHorizontal="8dp"
            android:gravity="center|left">

            <ImageView
                android:layout_width="@dimen/jarak_24dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting_radio_on"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginLeft="@dimen/jarak_20dp"
                android:text="agree with term and condition"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/jarak_24dp"
            android:background="@drawable/blueborder"
            android:layout_marginHorizontal="@dimen/jarak_20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:text="Register"
                android:textColor="@color/lightBlue"
                android:textSize="@dimen/text_size_14sp"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>